--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="brand">
-      <img src="assets/logo_ude_fdcs.jpg" alt="Universidad del Este - FDCS" />
+      <img src="./assets/logo_ude_fdcs.jpg" alt="Universidad del Este - FDCS" />
       <div class="t">
         <div class="h">Diplomaturas Ambientales</div>
         <div class="s">Guía del Estudiante · Edición 2026</div>
