Fix rutas app.js y logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Diplomaturas Ambientales · Guía del Estudiante · UDE · 2026</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <header class="header">
     <div class="brand">
-      <img src="./assets/logo_ude_fdcs.jpg" alt="Universidad del Este - FDCS" />
+      <img src="./logo_ude_fdcs.jpg" alt="Universidad del Este - FDCS">
       <div class="t">
         <div class="h">Diplomaturas Ambientales</div>
         <div class="s">Guía del Estudiante · Edición 2026</div>
@@ -481,6 +481,6 @@
     </div>
   </main>
 
-  <script src="assets/app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
