--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 <p>Versión descargable (PDF): disponible en el botón inferior.</p>
 
             <div class="footerbar">
-              <a class="pill" href="assets/guia_estudiante_2026.pdf" target="_blank" rel="noopener">Descargar PDF institucional</a>
+              <a class="pill" href="./guia_estudiante_2026.pdf" target="_blank" rel="noopener">Descargar PDF institucional</a>
               <span class="small">UDE · FDCS · 2026</span>
             </div>
             
