--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       <div class="topbar__inner">
         <div class="brand">
           <div class="brand__logos" aria-label="Identidad institucional">
-            <!-- CAMBIÁ SOLO LOS src POR LOS NOMBRES REALES EN TU REPO -->
-            <img class="brand__logo" src="./assets/ude_logo.png" alt="Universidad del Este"
-                 onerror="this.style.display='none';" />
-            <img class="brand__logo" src="./assets/fdcs_logo.png" alt="Facultad de Derecho y Ciencias Sociales"
-                 onerror="this.style.display='none';" />
-          </div>
+  <img
+    class="brand__logo brand__logo--combo"
+    src="./logo_ude_fdcs.jpg"
+    alt="Universidad del Este · Facultad de Derecho y Ciencias Sociales"
+    onerror="this.style.display='none';"
+  />
+</div>
 
           <div class="brand__text">
             <div class="brand__uni">Universidad del Este</div>
